# alta-via-1

./: README.md  index.html  italian-lpine-club-huts.geojson  main.py  main.sql  map.sql  marimo-map.py  pyproject.toml  refugi.duckdb
__marimo__/session/: marimo-map.py.json
data/interim/: adame.json  alagna-valsesia.json  albani-luigi.json  allavena-franco.json  alpe-corte.json  alpe-di-coassolo.json  alpe-helo.json  alpe-laghetto.json  alpe-moriana.json  alpe-nuovo.json  alpe-salei.json  alpetto.json  amprimo-onelio.json  andolla-nuovo-e-vecchio.json  angelini-giovanni.json  antermoia.json  aprica.json  argentea.json  aronte.json  auronzo.json  aviolo-sandro-occhi.json  bafile-andrea-mo.json  bailoni-raffaele.json  baita-bagneri.json  baita-biaena.json  baita-bueggio.json  baita-cai-bovisio-masciago.json  baita-del-meden.json  baita-gimont.json  baita-grignasco.json  baita-iseo.json  baita-manzara.json  balestreri-umberto.json  balma.json  balzola-mario.json  barba-giovanniferrero-luciano.json  barbero-roberto.json  baroni-sergio.json  barrasso-paolo.json  battaglione-alpini-monte-granero.json  (+378 more)
public/data/interim/: abate-carestia-antonio.json  alberico-corrado-e-borgna-luigi.json  allievi-francesco-bonacossa-aldo-e-alberto.json  alloratorio-di-cuney.json  alpe-primalpia.json  alpe-toso.json  alpinisti-monzesi.json  altissimochiesa-damiano.json  amedeo-pirozzini-allalpe-lago.json  antelao.json  antigine.json  augusto-pala-gia-hinderbalmo.json  baita-belem.json  baita-cernello.json  baita-del-cangi.json  baita-fontanedo.json  baita-fos-ce.json  baita-monte-alto.json  (+331 more)
(+3 files in other folders)
