[project]
name = "alta-via-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.2",
    "fsspec>=2025.10.0",
    "marimo>=0.18.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "sqlglot>=28.0.0",
    "vega-datasets>=0.9.0",
]
